package es.uniovi.dlp.ast;

import java.util.ArrayList;
import java.util.List;

public class Program {

  private List<Definition> definitions;

  public Program() {
    this.definitions = new ArrayList<Definition>();
  }
}
