package es.uniovi.dlp.ast;

public class VarDefinition extends AbstractDefinition {

    public VarDefinition(String name, Type type, int line, int column) {
        super(name, type, line, column);
    }
}
