@startuml Program
skinparam style strictuml
skinparam monochrome true


interface ASTNode {
    getLine(): int
    getColumn(): int
}

class Program

interface Definition extends ASTNode{
}

abstract class AbstractDefinition implements Definition {
    name: String
    type: Type
}


class VarDefinition extends AbstractDefinition {
}

class FunctionDefinition extends AbstractDefinition {
    varDefinitions: List<VarDefinition>
    paramList: List<Statement>
}


ASTNode <|.. Program
Program o-- "0..*" Definition
VarDefinition "0..*" --o FunctionDefinition
Statement "0..*" --o FunctionDefinition
Type "1" --o AbstractDefinition




@enduml
